[package]
name = "nanoval"
version = "0.2.0"
edition = "2021"
description = "A nan-tagged value for representing f64, i32, u32, booleans, null and arbitrary pointers."
license = "MIT"
repository = "https://github.com/phkeese/nanoval"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
